# GenericCmake

./: CMakeLists.txt  README.md  main.cpp
inc/Algo/: algo.h
inc/Geo/: geographics.h
inc/Location/: location.h
inc/Math/: math_util.h
inc/Structure/: structure.h
src/Algo/: algo.cpp
src/Geo/: geographics.cpp
src/Location/: location.cpp
src/Math/: math_util.cpp
src/Structure/: FooDer.cpp  FooDer.h  IFoo.h  structure.cpp
